ecmascript/parser/tests/test262-error-references/fail/4fd864d1c4df25b0.js.stderr
error: TS1056
 --> $DIR/tests/test262-parser/fail/4fd864d1c4df25b0.js:1:8
  |
1 | ({ get test() { } }) => 42
  |        ^^^^

